[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"
authors = ["sunzhibin", "rust"]
description = "命令行工具练习"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }